# pyzo

./: .gitignore  .hgignore  .hgsub  .hgsubstate  .pre-commit-config.yaml  CONTRIBUTING.md  Info.plist  LICENSE.md  MANIFEST.in  README.md  RELEASE_NOTES.md  TRANSLATIONS.md  a_copy_of_strux.py  azure-pipelines.yml  baseTextCtrl.py  changelog.txt  channels.py  codeparser.py  compactTabWidget.py  defaultConfig.ssdf  defaultStyles.ssdf  default_config.ssdf  dllutils.py  download_count.py  editor.py  editorBook.py  editorStack.py  editorTabs.py  freezeScript.py  freezeScript2.py  freeze_py3k.bat  gpl.txt  iep.appdata.xml  iep.pro  iep.py  iep.pyw  iepLogging.py  iepRemote1.py  iepRemote2.py  iep_.pyw  (+27 more)
.github/workflows/: cd.yml  ci.yml  ruff.yml
codeeditor/: __init__.py  _test.py  appearance.py  autocompletion.py  base.py  behaviour.py  calltip.py  codeeditor.py  highlighter.py  license.txt  manager.py  misc.py  python_syntax.py  qt.py  style.py
codeeditor/extensions/: appearance.py  autocompletion.py  behaviour.py  calltip.py
codeeditor/parsers/: __init__.py  c_parser.py  cython_parser.py  how_to_call_this.py  python_parser.py  python_syntax.py  stupid_parser.py  stupid_syntax.py  tokens.py
doc/: .requirements  Makefile  conf.py  index.rst  make.bat
doc/codeeditor/: index.rst
doc/yoton/: channels.rst  clientserver.rst  connection.rst  context.rst  events.rst  examples.rst  experiments.rst  index.rst  internals.rst  overview.rst
freeze/: Info.plist  boot.py  dllutils.py  download_count.py  freezeScript.py  frozen_libs.txt  installerBuilderScript.iss  pyzo_freeze.py  pyzo_package.py  pyzo_test_frozen.py  receive_file_from_vm.py
freeze/_settings/: README.txt
gui/: TODO  draggablelist.py  projects_dialog.ui  shell_tab.ui  shells_dialog.ui
iep/: __init__.py  __main__.py  contributers.txt  contributors.txt  license.txt  yotonloader.py
iep/codeeditor/: __init__.py  _test.py  base.py  highlighter.py  license.txt  manager.py  misc.py  qt.py  style.py  textutils.py
iep/iepcore/: __init__.py  about.py  assistant.py  baseTextCtrl.py  codeparser.py  (+16 more)
iepcore/: baseTextCtrl.py  codeparser.py  compactTabWidget.py  editor.py  editorTabs.py  icons.py  iepLogging.py  kernelbroker.py  main.py  menu.py  menu_old.py  shell.py  shellInfoDialog.py  shellStack.py  shellTabs.py
iepkernel/: __init__.py  guiintegration.py  interpreter.py  introspection.py  magic.py  start.py
plugins/: __init__.py  iepFindInFiles.py  iepInteractiveHelp.py  iepLogger.py  iepSourceStructure.py
pyzo/: __init__.py  __main__.py  _start.py  contributors.txt  license.txt  pre_qt_import.py  yotonloader.py
resources/: defaultConfig.ssdf  defaultStyles.ssdf  iep_en.tr  iep_nl.tr  iep_nl.tr.qm  lang_english.ssdf  notes_on_translating.txt  tutorial.py
test/: pySerial.qch  run_xvfb.sh  test_assistant.py  test_iep.py
tests/: check_log.py  test_api.py
tools/: __init__.py  iepFileBrowser.py  iepInteractiveHelp.py  iepLogger.py  iepProjectManager.py  iepSourceStructure.py  iepWebBrowser.py  iepWorkspace.py
(+314 files in other folders)
